# mining-sim

./: .gitignore  Cargo.toml  README.md
crates/mining-sim/src/: lib.rs  power_dist.rs  results.rs  utils.rs
crates/mining-sim/src/miner/: ndeficit.rs  selfish.rs
mining-sim/: Cargo.toml
mining-sim/src/: miner.rs  prelude.rs  simulation.rs
mining-sim/src/miner/: honest.rs  ndeficit.rs  ndeficiteager.rs  noise.rs  selfish.rs
research/: Cargo.toml
src/: block.rs  blockchain.rs  lib.rs  miner.rs  power_dist.rs  prelude.rs  results.rs  simulation.rs  tie_breaker.rs  transaction.rs  utils.rs
src/miner/: honest.rs  honestforking.rs  kdeficit.rs  ndeficit.rs  noop.rs  nsm.rs  selfish.rs  ties.rs
src/simulation/: builder.rs  power_dist.rs  results.rs
