[package]
name = "mining-sim"
authors = ["Jude Muriithi <muriithi@princeton.edu>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/jkmuriithi/mining-sim"
description = "Simulator for a game theory-based model of blockchain mining"

[dependencies]
dyn-clone = "1.0.16"
rand = "0.8.5"
rayon = "1.8.1"
thiserror = "1.0.56"

[profile.dev]
opt-level = 1

[profile.dev.package.'*']
opt-level = 3
