[workspace]
members = [
  "mining-sim",
  "research"
]
resolver = "2"

[workspace.package]
authors = ["Jude Muriithi <muriithi@princeton.edu>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/jkmuriithi/mining-sim"
description = "Simulator for a game theory-based model of blockchain mining"

[profile.dev]
opt-level = 1

[profile.dev.package.'*']
opt-level = 3
