[package]
name = "mining-sim"
authors.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
dyn-clone = "1.0"
rand = "0.8"
rayon = { version = "1.9", optional = true}
thiserror = "1.0"

[features]
default = ["rayon"]
block-children = []
rayon = ["dep:rayon"]
