[package]
name = "research"
authors.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
mining-sim = { path = "../mining-sim" }
